agregado matcher,structure

--- a/notebooks/01_analisis_pdf.ipynb
+++ b/notebooks/01_analisis_pdf.ipynb
@@ -35,7 +35,8 @@
     }
    ],
    "source": [
-    "archivo_pdf = \"../cv_prueba.pdf\" \n",
+    "\n",
+    "archivo_pdf = \"../cv_prueba2.pdf\" \n",
     "\n",
     "if os.path.exists(archivo_pdf):\n",
     "    print(\" Archivo encontrado. ¡Listo para operar!\")\n",
@@ -53,18 +54,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El PDF tiene 3 páginas.\n",
+      "El PDF tiene 2 páginas.\n",
       "\n",
       "---  VISTA PREVIA DEL TEXTO ---\n",
-      "JOEL TAQUÍA AYLLÓN\n",
-      "990759831\n",
-      "linkedin.com/in/joel-taquía-75601b193\n",
-      "Chorrillos - Lima\n",
-      "joeltaquia@gmail.com\n",
-      "RESUMEN PROFESIONAL\n",
-      "Profesional en analítica de datos, candidato a Magister en Estadística Matemática\n",
-      "(UNMSM), graduado en Computación Científica (UNMSM), especializado en Data\n",
-      "science; machine \n",
+      "INFORMATION TECHNOLOGY TECHNICIAN I\n",
+      "Summary\n",
+      "Versatile Systems Administrator possessing superior troubleshooting skills for networking issues, end user problems, and network security.\n",
+      "Experienced in server management, systems analysis, and offering in-depth understanding of IT infrastructure areas. Detail-oriented, independent,\n",
+      "and focused on taking a systematic approach to solving complex problems. Demonstrated exceptional technical knowledge and skills while\n",
+      "working with various teams to achieve shared goals and objectives.\n",
+      "Highlights\n",
+      "Active Directory New technology and product research\n",
+      "Group Policy Objects Office 365 and Azure\n",
+      "PowerShell and VBScript Storage management\n",
+      "Microsoft Exchange Enterprise backup management\n",
+      "VMWare experience Disaster recovery\n",
+      "Experience\n",
+      "Information Technology Technician I Aug 2007 to Current\n",
+      "Company Name ï¼​ City , State\n",
+      "Migrating and managing user accounts in Microsoft Office 365 and Exchange Online.\n",
+      "Creating and managing virtual machines for systems such as domain controllers and Active Directory Federation Services (ADFS) in\n",
+      "Microsoft Windows Azure (IaaS).\n",
+      "Creating and managing storage in Microsoft Windows Azure (IaaS).\n",
+      "Installing and configuring StorSimple iSCSI cloud array (STaaS/BaaS).\n",
+      "Installing, configuring, and testing Twinstrata iSCSI cloud array (STaaS/BaaS).\n",
+      "Collaborating on project plan for Office 365 migration.\n",
+      "Developing detailed specifications for the Office 365 migration, including business-case documentation, cost benefit analyses, technical\n",
+      "diagrams, and work flow documentation.\n",
+      "Received training in MVC 4 for Visual Studio using .Net Framework 4/4.5 to develop application using HTML5 and CSS3.\n",
+      "Installing, configuring, and supporting Linux machines for the open Wi-Fi network project.\n",
+      "Compiling and generating statistical information concerning wireless network traffic using Cacti.\n",
+      "Configuring wireless LAN router networking and security access.\n",
+      "Installing and configuring wireless certificates.\n",
+      "Developing detailed specifications for the acquisition of an Enterprise backup system including systems design, business-case\n",
+      "documentation, cost benefit analysis, technical diagrams, and work flow documentation.\n",
+      "Reviewing, evaluating, and analyzing departmental policies, guidelines, procedures, and standards with management and staff.\n",
+      "Developing test scripts for acceptance, unit, and system testing of Hyperion Phase 1 and MiamiBiz Phase 2.\n",
+      "Developing Quality Assurance and testing plan for Hyperion Phase 1 and MiamiBiz Phase 2.\n",
+      "Debugging and logging of errors in Hyperion and MiamiBiz using Team Foundation Server (TFS).\n",
+      "Participated in various phases of the project life cycle such as: determining requirements, design conceptualization, testing, implementation,\n",
+      "deployment, and release for the Hyperion and MiamiBiz projects.\n",
+      "Collaborating on project plans for Hyperion and MiamiBiz.\n",
+      "Preparing presentations and documentation to demonstrate Hyperion and MiamiBiz functionality or design.\n",
+      "Monitoring network traffic, and compiling and generating statistical information using Solar Winds.\n",
+      "Collaborating on Disaster Recovery plan and procedures.\n",
+      "Researching, evaluating, and recommending new hardware and new software.\n",
+      "Communicating and defining systems design and requirements for new and existing systems and applications.\n",
+      "Researching, evaluating, recommending, testing, and implementing third party software/utilities.\n",
+      "Planning and designing network infrastructure changes â€“ adding/removing servers, appliances, network logical flow.\n",
+      "Reviewing, evaluating, and analyzing existing system and application viability with management and staff.\n",
+      "Administering and maintaining shares on the file servers.\n",
+      "Reviewing server logs to troubleshoot issues.\n",
+      "Scheduling and applying hot fixes and security patches on the server infrastructure which includes the operating system and application\n",
+      "software.\n",
+      "Reviewing systems reporting in SCCM (System Center Configuration Manager).\n",
+      "Resolving service requests escalated by the Help Desk or other technicians.\n",
+      "Troubleshooting and analyzing and system problems for root cause analysis.\n",
+      "Giving and participating in training and education programs to explain upgrades to end users.\n",
+      "Migrating users' documents from local computer storage to shares on the file servers.\n",
+      "Configuring, supporting, and maintaining file shares using Distributed File System (DFS)\n",
+      "Managing, implementing, and testing Enterprise backup infrastructure systems such as the Symantec Veritas Netbackup, Symantec Backup\n",
+      "Exec System Recovery/Livestate, and VRanger backup servers.\n",
+      "Managing, configuring, and supporting DataDomain storage.\n",
+      "Configuring and supporting Microsoft Windows Server 2003, 2008, and 2012.\n",
+      "Installing, configuring, and supporting Microsoft Windows 7, Windows 8, and Microsoft Office 2007, 2010, and 2013.\n",
       "...\n",
       "\n",
       "---  No se detectaron tablas estructuradas en la pág 1 ---\n"
@@ -83,7 +136,7 @@
     "    # 1. Extraer texto simple\n",
     "    texto = primera_pagina.extract_text()\n",
     "    print(\"\\n---  VISTA PREVIA DEL TEXTO ---\")\n",
-    "    print(texto[:300]) # Primeros 300 caracteres\n",
+    "    print(texto) # ver todos los datos\n",
     "    print(\"...\")\n",
     "    \n",
     "    # 2. Verificar si tiene tablas\n",
@@ -95,14 +148,6 @@
     "    else:\n",
     "        print(\"\\n---  No se detectaron tablas estructuradas en la pág 1 ---\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9817d4cf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
