--- a/notebooks/02_estructuracion_llm_mistral.ipynb
+++ b/notebooks/02_estructuracion_llm_mistral.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a7236311",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8c8d23c4",
    "metadata": {},
    "outputs": [
@@ -66,36 +66,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enviando a mistral... (Esto puede tardar unos segundos según tu GPU/CPU)\n",
+      "Enviando a mistral.\n",
       "\n",
       "--- RESPUESTA DEL LLM ---\n",
       " {\n",
-      "    \"nombre\": \"Juan Pérez\",\n",
-      "    \"email\": \"juan.perez@email.com\",\n",
-      "    \"telefono\": \"+51 999 000 111\",\n",
-      "    \"skills\": [\"Python\", \"Docker\", \"AWS\", \"SQL\", \"English (B2)\"],\n",
-      "    \"experiencia\": [\n",
-      "        {\n",
-      "            \"puesto\": \"Tech Lead\",\n",
-      "            \"empresa\": \"Banco BCP\",\n",
-      "            \"periodo\": \"2020-Presente\",\n",
-      "            \"descripcion\": \"Lideré migración a nube AWS.\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"puesto\": \"Dev Junior\",\n",
-      "            \"empresa\": \"Software SAC\",\n",
-      "            \"periodo\": \"2018-2020\",\n",
-      "            \"descripcion\": \"Uso de Django y React.\"\n",
-      "        }\n",
-      "    ],\n",
-      "    \"educacion\": [\n",
-      "        {\n",
-      "            \"titulo\": \"Ingeniería de Sistemas\",\n",
-      "            \"institucion\": \"UNCP\",\n",
-      "            \"anio\": \"2018\"\n",
-      "        }\n",
-      "    ]\n",
-      "}\n",
+      "        \"nombre\": \"Juan Pérez\",\n",
+      "        \"email\": \"juan.perez@email.com\",\n",
+      "        \"telefono\": \"+51 999 000 111\",\n",
+      "        \"skills\": [\"Python\", \"Docker\", \"AWS\", \"SQL\", \"English (B2)\"],\n",
+      "        \"experiencia\": [\n",
+      "            {\n",
+      "                \"puesto\": \"Tech Lead\",\n",
+      "                \"empresa\": \"Banco BCP\",\n",
+      "                \"periodo\": \"2020-Presente\",\n",
+      "                \"descripcion\": \"Lideré migración a nube AWS.\"\n",
+      "            },\n",
+      "            {\n",
+      "                \"puesto\": \"Dev Junior\",\n",
+      "                \"empresa\": \"Software SAC\",\n",
+      "                \"periodo\": \"2018-2020\",\n",
+      "                \"descripcion\": \"Uso de Django y React.\"\n",
+      "            }\n",
+      "        ],\n",
+      "        \"educacion\": [\n",
+      "            {\n",
+      "                \"titulo\": \"Ingeniería de Sistemas\",\n",
+      "                \"institucion\": \"UNCP\",\n",
+      "                \"anio\": \"2018\"\n",
+      "            }\n",
+      "        ]\n",
+      "    }\n",
       "\n",
       " ¡ÉXITO! JSON válido detectado.\n",
       "Nombre detectado: Juan Pérez\n",
@@ -104,7 +104,7 @@
     }
    ],
    "source": [
-    "# Simulemos que esto salió de pdfplumber (puedes copiar el texto real de tu prueba anterior)\n",
+    "# Simulacion con pdfplumber \n",
     "texto_prueba = \"\"\"\n",
     "Juan Pérez\n",
     "Desarrollador Python Senior\n",
@@ -117,7 +117,7 @@
     "Skills: Python, Docker, AWS, SQL, English (B2)\n",
     "\"\"\"\n",
     "\n",
-    "print(f\"Enviando a {MODELO}... (Esto puede tardar unos segundos según tu GPU/CPU)\")\n",
+    "print(f\"Enviando a {MODELO}.\")\n",
     "\n",
     "try:\n",
     "    response = ollama.chat(model=MODELO, messages=[\n",
